# dragram

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml  seed.py
.claude/: launch.json
alembic/: env.py
alembic/versions/: 4d2b45c0fd5f_chats_and_messages.py  a1b2c3d4e5f6_add_chat_members_table.py  b2c3d4e5f6a7_add_trgm_search.py  c3d4e5f6a7b8_name_chat_members_constraints.py  d84e3dc107e6_users_public_keys.py  e211c836bfb8_users_table.py  e5f6a7b8c9d0_user_features.py  e6f7a8b9c0d1_chat_keys_table.py  f6a7b8c9d0e1_push_subscriptions.py  g7h8i9j0k1l2_posts_and_comments.py  h8i9j0k1l2m3_fix_users_fk.py  i9j0k1l2m3n4_post_likes_bookmarks.py  j0k1l2m3n4o5_albums_tables.py  k1l2m3n4o5p6_device_tokens.py  l2m3n4o5p6q7_message_thumbnail_url.py
frontend/: .env.example  capacitor.config.ts  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx  api.js  crypto.js  index.css  push.ts  types.ts  utils.js
nginx/: Dockerfile  nginx.conf
src/: api.py  config.py
src/albums/: depends.py  exceptions.py  models.py  repo.py  router.py  schemas.py  service.py
src/auth/: depends.py  models.py  repo.py  router.py  schemas.py  service.py
src/chats/: depends.py  exceptions.py  models.py  repo.py  router.py  schemas.py  service.py
src/core/: hashing.py  hashing_bcrypt_alt.py  rate_limit.py
src/db/: config.py  database.py
src/jwt_auth/: depends.py  jwt_service.py
src/notifications/: depends.py  (+6 more)
(+39 files in other folders)
