[project]
name = "dragram"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "fastapi[standard]>=0.115.0",
    "psycopg[binary]>=3.2.0",
    "pwdlib[argon2]>=0.2.0",
    "pyjwt>=2.8.0",
    "redis[hiredis]>=5.0.0",
    "sqlalchemy>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pydantic-extra-types>=2.11.1",
    "boto3>=1.43.16",
    "phonenumbers>=8.13.0",
    "firebase-admin>=6.5.0",
]
